# mexc-trading-bot

./: .gitignore  BLOCKERS_TEST_README.md  CANDLE_CLOSE_TRACKING_SUMMARY.md  Dockerfile  README.md  TEST_SUITE_SUMMARY.md  WARNING_DETECTOR_SUMMARY.md  comprehensive_validation.py  debug_warning.py  docker-compose.yml  final_summary.txt  final_validation.py  performance_test.py  pyproject.toml  requirements.txt  run.py  run_tests.py  scanner_implementation_summary.py  scanner_summary.py  simple_validate.py  test_indicators.py  test_scanner_comprehensive.py  test_scanner_simple.py  test_telegram_commands.py  test_telegram_core.py  test_universe.sh  test_warning_detector.py  validate_bot_fix.py  validate_handlers_fix.py  validate_indicators.py  validate_scanner.py  validate_scanner_core.py  validate_telegram.py
config/: .env.example
src/: __init__.py  config.py  database.py  logger.py  main.py
src/backtest/: __init__.py  engine.py
src/indicators/: __init__.py  core.py  helpers.py
src/jobs/: __init__.py  daily_report.py  scanner.py  signal_dispatch.py  universe_refresh.py
src/portfolio/: manager.py
src/regime/: __init__.py  classifier.py
src/reporting/: __init__.py  formatters.py  summarizer.py
src/scanner/: __init__.py
src/scoring/: __init__.py  engine.py
src/state/: __init__.py  pause.py
src/telegram_bot/: __init__.py  bot.py  formatters.py  handlers.py
src/trading/: __init__.py  paper_trader.py
src/universe/: __init__.py  filters.py  (+2 more)
tests/: __init__.py  test_blockers_integration.py  test_database.py  test_indicators.py  test_portfolio.py  test_reporting.py  test_scanner.py  test_telegram.py  test_universe.py  test_warnings.py
(+2 files in other folders)
